fix background not blue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
+:root {
+  background-color: #2463af;
+}
